Lots of Updates Now

--- a/rooappendix.html
+++ b/rooappendix.html
@@ -11,8 +11,6 @@
 	<link rel="shortcut icon" type="image/png" href="images/rassilonicon2.png">
 	<style>
 	</style></head>
-
-
 <body>
 	<script>
 		var isMobile = navigator.userAgent.match(/(iPhone|iPod|iPad|Android)/);
@@ -1657,11 +1655,9 @@ inaugurated. </span>
 					<span class="A-audiobook">The Seven Strictures of Rassilon</span>
 				</li>
 				<li>
-					<span class="A-audiobook">The Signet-Ring of Rassilon</span>
-				</li>
+					<span class="A-audiobook">The Signet-Ring of Rassilon</span></li><li><span class="A-audiobook">The Staff of Rassion (which is different then the Rod of Rassilon)<br></span></li>
 				<li>
-					<span class="A-game">The Star of Rassilon (a crystal that was part of Rassilon's TARDIS)</span>
-				</li>
+					<span class="A-game">The Star of Rassilon (a crystal that was part of Rassilon's TARDIS)</span></li><li><span class="A-game"><span class="A-audiobook">The Thimble of Rassilon</span> <br></span></li>
 				<li>
 					<span class="A-game">The Time Scoop of Rassilon</span>
 				</li>
