--- a/roobiology.html
+++ b/roobiology.html
@@ -257,16 +257,15 @@
 			</div>
 			<div class="section">
 				<span class="A-audiobook">A loom consists of millions of fine cords which </span>
-				<span class="A-notbbc">weave matter (probably Rapid Growth Biomass) and biodata together. A new loom probably takes over 11 years to produce
+				<span class="A-notbbc">weave matter (probably rapid growth biomass) and biodata together. A new loom probably takes over 11 years to produce
 					its first loomling. </span>
-				<span class="A-audiobook">The Looms are held in the loomshed of the a physical house. Each House's loom has its own Loom core, which serves as
+				<span class="A-audiobook">The Looms are held in the loomshed of the&nbsp;physical house. Each House's loom has its own Loom core, which serves as
 					its genius loci. This creates a template that standardizes the abilities
 					<span class="A-alternate">and blood </span>of everyone loomling of that family. </span>
 				<span class="A-notbbc">Members of each house have minor variations in abilities unique to their house. </span>
 				<span class="A-alternate">An experienced vampire can tell which house a Gallifreyan came from by the taste of their blood. </span>
 				<span class="A-audiobook">The loom weaves a random body based on that House's basic, but unique, template. Thus there is no way for someone to
-					control the appearance of a new child
-					<span class="A-notbbc">e.
+					control the appearance of a new child<span class="A-notbbc">e.
 						<span class="A-tv">So while the chances of a duplicate regeneration is relatively high,
 							<span class="A-audiobook">the appearance of all first incarntations are unquie. </span>
 						</span>
@@ -285,11 +284,8 @@
 			</div>
 			<div class="section">
 				<span class="A-audiobook">Depending on the programing that house's loom core, some looms
-					<span class="A-tv">produce offspring in the form of a small child
-						<span class="A-notbbc">e</span> (reminiscent of a human child)</span>, but most loomlings emerge as full grown adults. </span>
-				<span class="A-audiobook">These child
-					<span class="A-notbbc">e</span>ren have milk teeth. </span>
-				<span class="A-audiobook">A loomling will have trouble using proper grammar, but can walk right after Looming. </span>
+					<span class="A-tv">produce offspring in the form of a small child<span class="A-notbbc">e</span> (reminiscent of a human child)</span>, but most loomlings emerge as full grown adults. </span>
+				<span class="A-audiobook">These child<span class="A-notbbc"></span></span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-audiobook"><span class="A-notbbc"></span> have milk teeth.</span><span class="A-notbbc"> Memetic priming was used to give the loomlings foreknowledge.&nbsp;</span><span class="A-audiobook">A loomling will have trouble using proper grammar, but can walk right after Looming. </span>
 				<span class="A-tv">
 					<span class="A-audiobook">It should be noted that Gallifreyans break most of the laws of biology before they take their first step. </span>
 				</span>
@@ -470,7 +466,7 @@
 				<span class="A-audiobook">The Epiphysis Cerebri‎‎ on a Gallifreyan is twice the size of a humans. It is sometimes known as the Third
 					Eye and is the part of the brain that is the source of psychic activity. A dormant throwback organ in their brains can
 					allow them to sense higher dimensions (with training). &nbsp;Their brains also have a </span><span class="A-audiobook">Lateral Interpositus Nucleus. </span><span class="A-audiobook">At the base of their brains is a separate tertiary lobe called
-					<span class="A-tv">the Autonomic Brain that handles all body and motor functions. </span>
+					<span class="A-tv">the Autonomic Brain that handles all body and motor functions. &nbsp;This gives them a total of 3 brain stems. </span>
 				</span>
 				<span class="A-audiobook">A Gallifreyan’s autonomic brain is like a helper mind that can be told to do and monitor simple things while the
 					main consciousness thinks about other things. It can even send non-descriptive alerts to the mind. By voluntarily reducing
@@ -530,12 +526,11 @@
 					are equipped with octagons, </span>
 				<span class="A-audiobook"></span>
 				<span class="A-audiobook">gives them amazing night vision and
-					<span class="A-tv">the abbility to see, and recall, an amazing amount of detail in something over 100 yards away.</span>
+					<span class="A-tv">the ability to see, and recall, an amazing amount of detail in something over 100 yards away.</span>
 				</span>
 				<span class="A-audiobook">They can shift their vision outside the normal visual spectrum allowing them to see a total of 170 different levels of
 					the electromagnetic spectrum, including in some shades of ultraviolet. </span>
-				<span class="A-audiobook">However, having their second heart removed prevents them from reprogramming how their eyes work.</span>
-				<span class="A-audiobook">There's a lot of evidence that their eye color can change depending on mood. Their pupil response is very different from
+				<span class="A-audiobook">However, having their second heart removed prevents them from reprogramming how their eyes work.</span> <span class="A-audiobook">Their eye color can change from brown with flecks of gold, to midnight blue to deep purple. &nbsp;<span class="A-notbbc">The &nbsp;eyes of the Older House are flecked with purple.</span> &nbsp;Such changes appear to depend on their mood. Their pupil response is very different from
 					humans and can resist super intense photo-emissions that would permanently blind a human. They can control the musculature
 					of their eyes to bring things into a very precise focus.
 					<span class="A-fanon">(If they remember to check)</span> they can tell whether a humanoid is Gallifreyan just by looking at them.
@@ -568,7 +563,9 @@ too many minutes.</span></span><br><span class="A-audiobook"><span class="A-audi
 				<span class="A-tv">The scent of Celery is considered to be another powerful restorative on Gallifrey. A Gallifreyan can hear significantly
 					higher frequencies then a human. Many Gallifreyans are capable of amazing voice imitation. Thus locks with voice prints
 					are not in common use.
-					<span class="A-audiobook">Compared to humans, Gallifreyans are quite resistance to dizziness and other inner-ear disorientation. </span>
+					<span class="A-audiobook">Compared
+to humans, Gallifreyans are quite resistance to dizziness and other
+inner-ear disorientation caused by sudden changes in position. </span>
 				</span>
 			</div>
 		</div>
@@ -677,7 +674,7 @@ too many minutes.</span></span><br><span class="A-audiobook"><span class="A-audi
 					<span class="A-game">They can make their hearts work in overdrive. Though this is quite painful it provides vast reserves of stamina. </span>
 				</span>
 				<span class="A-tv">
-					<span class="A-game">As children, </span>
+					<span class="A-game">As child</span></span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-tv"><span class="A-game">, </span>
 					<span class="A-tv">Gallifreyans are trained to stop both their hearts and feign death for several hours.</span>
 				</span>
 				<span class="A-audiobook">
@@ -814,7 +811,7 @@ every Gallifreyan has a unique psycho-kinetic signature, this allows</span>
 			<div class="section">
 				<span class="A-licensed">
 					<span class="A-audiobook">Aside from two extra ribs (for a total of 26) </span>a Gallifreyan's skeleton is almost identical to a humans.
-					<span class="A-audiobook">Their teeth are immune to all forms of tooth decay. </span>
+					<span class="A-audiobook">Their teeth are immune to all forms of tooth decay, and never needed to brush their teeth.&nbsp;</span></span><span class="A-licensed">By human standards, most Gallifreyans are tall, with solemn, learned faces.</span><span class="A-licensed"><span class="A-audiobook"></span>
 				</span>
 				<span class="A-audiobook">Gallifreyans have got multiple organs of virtually everything. They have 2 of most of the organs that humans have only
 					one of, and 4 of the organs that humans have only two of. </span>
@@ -823,14 +820,15 @@ every Gallifreyan has a unique psycho-kinetic signature, this allows</span>
 					<span class="A-fanon">(this could vary from House to House?) </span>
 				</span>
 				<span class="A-audiobook">The also have several organs that have no </span>
-				<span class="A-audiobook">analogue with humans. Indeed, despite looking like humans from Sol III, biologically speaking Gallifreyans have much
-					more in common with Chelonians.</span>
+				<span class="A-audiobook">real
+analogue with those found in humans. Indeed, despite looking like
+humans from Sol III, biologically speaking Gallifreyans have much more
+in common with Chelonians.</span>
 				<span class="A-tv">
 					<span class="A-game"> Just about every one of their organs are much more efficient and effective then a human’s equivalent.</span> Their
 					internal body temperature is 15 (or 16) degrees Celsius
 					<span class="A-audiobook">
-						<span class="A-licensed">(59 to </span>6
-						<span class="A-licensed">1</span> degrees Fahrenheit) however their skin temperature is only a little below the human norm. </span>
+						<span class="A-licensed">(59 to </span>6<span class="A-licensed">1</span> degrees Fahrenheit) however their skin temperature is only a little below the human norm. </span>
 				</span>
 				<span class="A-audiobook">With
 a a fair amount of concentration, a Gallifreyan bring their body
@@ -932,7 +930,9 @@ period of time. </span>
 			</div>
 			<div class="section">
 				<span class="A-audiobook">While a Gallifreyan's skin often smells like honey,
-					<span class="A-tv">they can change their scent at will. This allows them to hid from predators that hunt by scent. </span>They have a wide
+					<span class="A-tv">they
+can easily change their scent at will using olfactory misdirection.
+This allows them to hid from predators that hunt by scent. </span>They have a wide
 					range of smells they can pick from. </span>
 				<span class="A-audiobook">Their skin has extra subdural and subcutaneous layers that will eject foreign objects such as subcutaneous implants.
 					<span class="A-tv">In order to keep an implant inside a Gallifreyan it must be attached to the cartilage. </span>
@@ -986,7 +986,7 @@ too many minutes. </span>Most humans are stronger then the average Gallifreyan <
 					hours of sleep a day, some Gallifreyans can even get by on a decade of sleep every 100 years. Gallifreyans might be
 					able to sleep standing up. Gallifreyan's with only one heart will find that they need much more sleep then a two hearted
 					Gallifreyan. Gallifreyans rarely dream, but when they do, they sometimes dream of choosing their next bodies, being
-					able to fly, becoming the opposite sex, and bearing children.
+					able to fly, becoming the opposite sex, and bearing child</span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-audiobook">.
 					<span class="A-fanon">Because
 						<span class="A-tv">dreams can access the astral vortex,</span>
 					</span>
@@ -1129,7 +1129,11 @@ too many minutes. </span>Most humans are stronger then the average Gallifreyan <
 					<span class="A-tv">a Gallifreyan can
 						<span class="A-audiobook"> temporarily</span> delay the completion of their regeneration for
 						<span class="A-game">at least 30 minutes and</span> possibly several hours.
-						<span class="A-audiobook">Very strong willed Time Lords have been known to hold of a regeneration for several days.</span>
+						<span class="A-audiobook">Very
+strong willed Time Lords have been known to hold of a regeneration for
+several days. &nbsp;Under some very rare circumstances a Gallifreyan
+corpse can regenerate and come to life centuries after being declared
+dead.&nbsp;</span>
 					</span>
 				</span>
 				<span class="A-tv"> Unfortunately, temporary
@@ -1186,7 +1190,7 @@ bio-matching receptacles are rarely available).</span>
 						<span class="A-tv">into another Gallifreyan.
 							<span class="A-audiobook">This process is known as genetic fusion, </span>and allows the other Gallifrey to trigger the healing part of a regeneration,
 							without fulling transforming into a new body. The transfer is not very efficient. A significant amount of regenerative
-							energy is required to heal a broken wrist, and it would take all of the donor's unused regenerations to heal a mortal
+							energy is required to heal a broken wrist. <span class="A-game">&nbsp;Healing a major bullet would use up an entire incarnation, and </span>it would take all of the donor's unused regenerations to heal a major mortal
 							wound.
 							<span class="A-audiobook">Even with Gallifreyan gene-splicing science this is still an imperfect and unreliable technique. </span>
 						</span>
@@ -1245,7 +1249,7 @@ bio-matching receptacles are rarely available).</span>
 							<span class="A-fanon">Because of this </span>
 							<span class="A-audiobook">some Time Lords will catch glimpses of their entire past and future during the final tremors of their regeneration.
 								<span class="A-licensed">This is known as a Memory Vortex.
-									<span class="A-game">Most regenerations take between 10 seconds and 2 minutes. </span>
+									<span class="A-game">Most regenerations take between 10 seconds and 2 minutes and release a great deal of heat. </span>
 								</span>
 							</span>
 						</span>
