--- a/rootimeline4.html
+++ b/rootimeline4.html
@@ -10,8 +10,6 @@
 	<link rel="shortcut icon" type="image/png" href="images/rassilonicon2.png">
 	<style>
 	</style></head>
-
-
 <body>
 	<script>
 		var isMobile = navigator.userAgent.match(/(iPhone|iPod|iPad|Android)/);
@@ -318,8 +316,7 @@
 					<span class="A-audiobook">Ushas, and her Seal</span>
 				</p>
 			</center>
-			<span class="A-tv">-0</span>
-			<span class="A-fanon">.5~</span>
+			<span class="A-tv">-0</span><span class="A-fanon">.5~</span>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<span class="A-tv">(the same year as the Doctor is loomed</span>
 			<span class="A-audiobook">/ possibly several months before him as she is at least two semesters ahead of him at the Time Academy)</span>
@@ -335,8 +332,7 @@
 					<span class="A-licensed"> and
 						<span class="A-game"> a genius in bio-chemistry, despite the fact that
 							<span class="A-audiobook">Gallifreyans have abandoned all forms of biological experimentation. </span>The triple circles of the Rani’s
-							seal represents the 3 arms of Mutters Galaxy (Sagittarius, Orion, and Perseus). &nbsp;
-							<span class="A-audiobook">She is not from a Newblood House and her fear of losing her identity because of a regeneration will lead to her keeping
+							seal represents the 3 arms of Mutters Galaxy (Sagittarius, Orion, and Perseus).&nbsp;<span class="A-audiobook">She is not from a Newblood House and her fear of losing her identity because of a regeneration will lead to her keeping
 								the same body for over 900 years. &nbsp;</span>
 						</span>
 					</span>
@@ -1443,19 +1439,16 @@ mother shows him the space ships flying overhead.</span>
 						at Prydon Academy and goes to visit the Hermit on Mt Cadon at an earlier then his usual time.&nbsp; He catches another
 						boy there who he doesn't know.&nbsp; The Hermit is teaching the boy about Vampires and the Sphinx.&nbsp; This boy is
 						implied to be the Master.&nbsp; The Doctor believed that he was the Hermit’s only pupil and is enraged at this
-						betrayal.&nbsp; The Doctor believes that he is better then any other student, and thus the only one who deserves the
+						betrayal.&nbsp;The Doctor believes that he is better then any other student, and thus the only one who deserves the
 						Hermit’s attention.&nbsp; The Hermit explains that he teaches all of the young renegades and that the Doctor
-						needs to realize that the Universe doesn't owe him anything.&nbsp; This revelation is one of the most traumatic points
-						in the Doctor’s early life. &nbsp;</span>
-				</span>
-				<span class="A-audiobook">
-					<span class="A-tv">The Doctor, </span>Koschei
+						needs to realize that the Universe doesn't owe him anything.&nbsp;This revelation is one of the most traumatic points
+						in the Doctor’s early life.&nbsp;</span></span><span class="A-audiobook"><span class="A-tv">The Doctor, </span>Koschei
 					<span class="A-tv">(the Master) </span>and Magnus (the War Chief)
 					<span class="A-tv">become good friends</span>
 					on their first day at the Academy. &nbsp;
 					<span class="A-tv">The Doctor believes that </span>
 				</span>
-				<span class="A-tv">he and Koschei (the Master) are exactly the same. &nbsp;</span>
+				<span class="A-tv">he and Koschei (the Master) are exactly the same. &nbsp;They become friends and colleagues. &nbsp;</span>
 				<span class="A-audiobook">
 					<span class="A-tv"></span>
 				</span>
@@ -1670,8 +1663,7 @@ gun.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
 			<p>
 				<span class="A-tv">8&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; (when he was and 8 year old Novice)
 					<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; As part of his initiation ritual the Doctor
-					is taken to the Untempered Schism and stares into eternity.&nbsp; </span>
-				<span class="A-tv">The Doctor runs away from what he sees and he later comments that he basically spent the rest of his life running away.
+					is taken to the Untempered Schism and stares into eternity.<span class="A-game">&nbsp;</span></span><span class="A-tv"><span class="A-game">He sees forests rising up, absorbing sunlight from a billion summers, and falling into the ground and hardening into diamonds.</span> The Doctor runs away from what he sees and he later comments that he basically spent the rest of his life running away.
 					&nbsp;Others claim that the Doctor will spend his whole life running away from his true identity.&nbsp; </span>
 				<span class="A-audiobook">
 					<span class="A-tv">The Doctor is now known</span>
@@ -1682,10 +1674,7 @@ gun.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
 						<span class="A-tv">Time Tot </span>
 						<span class="A-audiobook">(aka Time Toddlers)</span>
 					</span> and</span>
-				<span class="A-tv"> is given the rank of Novice.</span>
-				<span class="A-tv">
-					<span class="A-audiobook">
-						<span class="A-game"> &nbsp;
+				<span class="A-tv"> is given the rank of Novice.</span><span class="A-tv"><span class="A-audiobook"><span class="A-game">
 							<span class="A-licensed">The same Time Lords who observed the Master staring into the Schism observed the Doctor.</span>
 						</span>
 					</span>
@@ -5510,7 +5499,8 @@ Peinforte is a powerful telepath and hypnotist. </span>
 				<p>
 					<span class="A-audiobook">
 						<span class="A-licensed">
-							<span class="A-audiobook">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (by the time of The Nameless City / probably before the
+??&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;The Time Lords ban Black
+Hole Drive technology throughout the Seven Systems. &nbsp;</span></span></p><p><span class="A-audiobook"><span class="A-licensed"><span class="A-audiobook">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (by the time of The Nameless City / probably before the
 								Doctor left Gallifrey)&nbsp;
 								<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; By this point the Time Lords have saved
 								millions of worlds in many galaxies by policing history and stopping temporal marauders.</span>
