--- a/rootimeline5.html
+++ b/rootimeline5.html
@@ -366,19 +366,18 @@ you will see wonders that no Human has ever dreamt possible. <br>Or stay behind 
 					<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Exiles:
 					<span class="A-licensed"></span>
 				</span>
-				<span class="A-audiobook">The TARDIS begins waking up from its hibernation.
-					<span class="A-fanon"> &nbsp;</span>
-				</span>
-				<span class="A-audiobook">
-					<span class="A-licensed">Larn
-					</span>(aka Susan) sees a glimpse of her future adventures.&nbsp; Some traveling companions of the Doctor will occasionally
-					glimpse a gray lady standing in the TARDIS engine room. This ghost is a manifestation of the TARDIS sentience. &nbsp;</span>
-				<span class="A-audiobook">The Doctor will not form a symbiotic link with the TARDIS until after Here There Be Monsters.&nbsp;</span>
+				<span class="A-audiobook">The TARDIS begins waking up from its hibernation.&nbsp;<span class="A-fanon"></span></span><span class="A-audiobook"><span class="A-licensed">Larn
+					</span>(aka Susan) sees a glimpse of her future adventures.&nbsp;Some traveling companions of the Doctor will occasionally
+					glimpse a gray lady standing in the TARDIS engine room. This ghost is a manifestation of the TARDIS sentience.&nbsp;</span><span class="A-audiobook">The Doctor will not form a symbiotic link with the TARDIS until after Here There Be Monsters.&nbsp;</span>
 				<span class="A-audiobook">
 				</span>
-				<span class="A-fanon">Does the Hand of Omega compensate for this? &nbsp;Because Susan's imprint was from the past the Time Lords might not
-					be looking for it. &nbsp;Does she form a link with the TARDIS instead? </span>
-				<span class="A-audiobook">&nbsp;The Doctor now has to familiarize himself with how to operate this veteran and vintage TARDIS.&nbsp;</span>
+				<span class="A-fanon">Does the Hand of Omega compensate for this? Because Susan's imprint was from the past the Time Lords might not
+					be looking for it. Does she form a link with the TARDIS instead? </span>
+				<span class="A-audiobook">The
+Doctor now has to familiarize himself with how to operate this veteran
+and vintage TARDIS. At this point virtually no one has ever conceived
+of leaving Gallifrey. At this point, Susan has never danced but she
+knows what dancing is.&nbsp;</span>
 			</p>
 			<p>
 				<span class="A-tv">
@@ -421,8 +420,9 @@ you will see wonders that no Human has ever dreamt possible. <br>Or stay behind 
 					a</span>
 				<span class="A-audiobook"> Type 45 </span>
 				<span class="A-tv"> TARDIS and leaves Gallifrey.&nbsp;
-					<span class="A-notbbc">This TARDIS refers to itself as Lolita.&nbsp; Koschei left Gallifrey because he was bored.&nbsp;
-						<span class="A-audiobook">At this point he has the same goal as the Doctor. &nbsp;</span>
+					<span class="A-notbbc">This TARDIS refers to itself as Lolita.&nbsp; <span class="A-audiobook">Koschei
+left Gallifrey because he got bored doing everything the Time Lord way.
+&nbsp;At this point he has the same goal as the Doctor.&nbsp;</span>
 					</span>
 				</span>
 				<span class="A-audiobook">
@@ -433,25 +433,15 @@ you will see wonders that no Human has ever dreamt possible. <br>Or stay behind 
 				<span class="A-tv">He believes his personal truth lies in the stars,
 					<span class="A-audiobook"> and </span>
 				</span>
-				<span class="A-audiobook">hopes to find an ideal society. &nbsp;
-					<span class="A-licensed">The Time Lords will declare him an exile. &nbsp;</span>
+				<span class="A-audiobook">hopes to find an ideal society.&nbsp;<span class="A-licensed">The Time Lords will declare him an exile. &nbsp;</span>
 				</span>
 				<br>
 				<span class="A-fanon"></span>
 			</p>
 			<p>
-				<span class="A-fanon">342</span>
-				<span class="A-tv">
-					<span class="A-game">
-						<span class="A-fanon"> &nbsp;
-							<span class="A-licensed">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (</span>
-						</span>
-					</span>
-				</span>
-				<span class="A-licensed">within 2 days of the assassination of </span>
-				<span class="A-licensed">Pandad VIII</span>
-				<span class="A-audiobook">
-					<span class="A-licensed">)</span>
+				<span class="A-fanon">342</span><span class="A-tv"><span class="A-game"><span class="A-fanon">&nbsp;
+							<span class="A-licensed">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (</span></span></span></span><span class="A-licensed">within 2 days of the assassination of </span>
+				<span class="A-licensed">Pandad VIII</span><span class="A-audiobook"><span class="A-licensed">)</span>
 					<br>
 					<span class="A-game">
 						&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span>
@@ -546,9 +536,7 @@ you will see wonders that no Human has ever dreamt possible. <br>Or stay behind 
 				</span>
 				<span class="A-audiobook">
 					is elected the 405th
-					<span class="A-tv">President of Gallifrey, but it will take years for his inauguration to be arranged. &nbsp;</span>
-				</span>
-				<span class="A-audiobook">This is the last time a presidential election will be held until the events of Mindbomb.</span>
+					<span class="A-tv">President of Gallifrey, but it will take years for his inauguration to be arranged.&nbsp;</span></span><span class="A-audiobook">This is the last time a presidential election will be held until the events of Mindbomb.</span>
 			</p>
 			<p>
 				<span class="A-tv">
@@ -558,11 +546,7 @@ you will see wonders that no Human has ever dreamt possible. <br>Or stay behind 
 					<span class="A-audiobook">(after Azmael guns down the High Council)&nbsp;
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The newly promoted High Council is less
 						corrupt then then the previous one. &nbsp;Their first act to launch an investigation into how Azmael breached the council
-						chamber security systems. &nbsp;Grateful for a chance at power, they declare Azmael to be Public Hero Number One. &nbsp;</span>
-				</span>
-				<span class="A-audiobook">
-					<span class="A-tv">
-						<span class="A-audiobook">Azmael is horrified at what he has been forced to do and publicly declares himself to be an outcast.
+						chamber security systems. Grateful for a chance at power, they declare Azmael to be Public Hero Number One.&nbsp;</span></span><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook">Azmael is horrified at what he has been forced to do and publicly declares himself to be an outcast.
 							<span class="A-licensed">
 							</span>
 						</span>
@@ -648,9 +632,7 @@ Doctor has his first encounter with a vortex rupture.&nbsp;&nbsp;</span>
 					<span class="A-licensed">
 						&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; Timeslip: </span>
 				</span>
-				<span class="A-audiobook">The Hand of Omega ceases to be the guiding power source for the TARDIS. &nbsp;</span>
-				<span class="A-audiobook">
-					<span class="A-licensed">The Doctor activates the TARDIS's internal power source. &nbsp;</span>
+				<span class="A-audiobook">The Hand of Omega ceases to be the guiding power source for the TARDIS.&nbsp;</span><span class="A-audiobook"><span class="A-licensed">The Doctor activates the TARDIS's internal power source. &nbsp;</span>
 				</span>
 			</p>
 			<p class="A-game">?&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (shortly after leaving Gallifrey)
@@ -1747,9 +1729,11 @@ details of his life.</span>
 						<span class="A-tv">
 							(right after The Tribe of Gum)</span>
 						<br class="A-tv">
-						<span class="A-tv">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; The Daleks (aka The Mutants, aka etc...): This
-							might be the first time the Doctor meets the Daleks. &nbsp;The Doctor resolves to never let himself become like the
-							Daleks.</span>&nbsp; The image of Skaro's petrified forests will haunt him for the rest of his life.&nbsp; </span>
+						<span class="A-tv">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; The Daleks (aka The
+Mutants, aka etc...): This might be the first time the Doctor meets the
+Daleks. &nbsp;This is when the Doctor figures out who he really is.
+&nbsp;The Doctor resolves to never let himself become like the Daleks.</span>&nbsp; The image of Skaro's petrified forests will haunt him for the rest of his life.&nbsp; </span>
 				</span>
 				<span class="A-tv">
 					<span class="A-audiobook">
@@ -3579,7 +3563,6 @@ force drain the Doctor suffers </span>
 				</span>
 			</div>
 			<br>
-			<br>
 			<span class="A-tv">
 				<span class="A-audiobook">
 					<span class="A-fanon">
@@ -4116,8 +4099,7 @@ install a single switch that will instantly enable Sol III coordinates.
 						<span class="A-audiobook">&nbsp; (about 2 years before War Games from Zoe's POV / but no more then 1 year before War Games from the Doctor's
 							POV)</span>
 						<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Wheel in Space: by this point it appears
-						that Jamie still hasn't had to eat any pill or wafer food out of the TARDIS Food Machine.</span>
-					<br>
+						that Jamie still hasn't had to eat any pill or wafer food out of the TARDIS Food Machine.</span> It would appear that a corrupted version of these events becomes part of Gallifreyan fairy tales with the title <span style="font-style: italic;">The Scruffy Piper.</span><br>
 				</span>
 			</p>
 			<p>
@@ -11626,19 +11608,10 @@ will be someone to watch over the last humans after they die.&nbsp; <br>
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Planet of Fire:&nbsp; </span>
 					<span class="A-tv">
 						<span class="A-audiobook">
-							<span class="A-game">The planet Sarn might later become known as Karn in the future. &nbsp;</span>
+							<span class="A-game">The planet Sarn might later become known as Karn in the future. &nbsp;</span></span></span><span class="A-audiobook"><span class="A-fanon"><span class="A-audiobook">By this point Turlough knows enough about TARDIS operation to slip it forward 6 months in time.</span>
 						</span>
 					</span>
-					<span class="A-audiobook">
-						<span class="A-fanon">
-							<span class="A-audiobook">By this point Turlough knows enough about TARDIS operation to slip it forward 6 months in time.</span>
-						</span>
-					</span>
-					<span class="A-tv">At this point the Doctor believes that the Master's Trakenite body should last several more years.</span>
-					<span class="A-audiobook">
-						<span class="A-fanon"> &nbsp;</span>
-					</span>
-					<span class="A-tv">The Doctor deliberately tries to kill the Master despite his desperate pleading.</span>
+					<span class="A-tv">At this point the Doctor believes that the Master's Trakenite body should last several more years.</span> <span class="A-audiobook"><span class="A-fanon"></span></span><span class="A-tv"> The Doctor deliberately tries to kill the Master despite his desperate pleading.</span>
 					<span class="A-audiobook">
 						<span class="A-fanon">
 							<span class="A-audiobook"> The Master's body is left hideously burned at the end of this story.&nbsp;&nbsp;</span>
