--- a/rootimeline6.html
+++ b/rootimeline6.html
@@ -10,8 +10,6 @@
 	<link rel="shortcut icon" type="image/png" href="images/rassilonicon2.png">
 	<style>
 	</style></head>
-
-
 <body>
 	<script>
 		var isMobile = navigator.userAgent.match(/(iPhone|iPod|iPad|Android)/);
@@ -1542,8 +1540,7 @@ possibly Hedin. <br>
 					</span>
 				</li>
 				<li>
-					<span class="A-notbbc">Gallifrey VII starts between 48,000 BC</span>
-					<span class="A-notbbc"> and 0 AD (Brax believes this Gallifrey is not the original)</span>
+					<span class="A-notbbc">Gallifrey VII starts between 48,000 BC</span><span class="A-notbbc"> and 0 AD (Brax believes this Gallifrey is not the original)</span>
 					<span class="A-audiobook">
 						<span class="A-notbbc"></span>
 					</span>
@@ -1555,8 +1552,7 @@ possibly Hedin. <br>
 					<span class="A-tv">One Gallifrey might start at 3172 AD</span>
 				</li>
 				<li>
-					<span class="A-game">One Gallifrey might start at 30,796 AD</span>
-				</li>
+					<span class="A-game">One Gallifrey might start at 30,796 AD</span></li><li><span class="A-game"><span class="A-licensed">One Gallifrey is located at the very edge of time and space.</span><br></span></li>
 			</ul>
 		</div>
 	<div class="section">
