--- a/rootimeline8.html
+++ b/rootimeline8.html
@@ -480,8 +480,27 @@ kill the populations of the worlds it contaminates. </span>
 			<span class="A-licensed"> &nbsp;</span>
 			<span class="A-alternate">
 				<span class="A-tv">He continues to travel the Universe in his aging Type 40 TARDIS. &nbsp;He generally tries to avoid taking direction action,
-					but instead tries to convince and advise the locals of any given time zone on how they should solve their problems.
+					but instead tries to convince and advise the locals of any given time zone on how they should solve their problems.</span></span></p><p>
+			<span class="A-fanon">1691~ </span>
+			&nbsp;&nbsp;&nbsp;
+			<span class="A-alternate">
+				<span class="A-tv">(after the death of Gallifrey)</span>
+			</span>
+			<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+			<span class="A-alternate">
+				<span class="A-tv">
+					<span class="A-licensed">
+						<span class="A-tv">Many Time Aware and Time Active species, such as the Time Agents of the 51st century, believe the Time War was a legend.&nbsp;
+							They regard<span class="A-audiobook"> the Rulers of Time</span> (or Time Lords) as myths and whispers of the high species. &nbsp;However a few Time Active species know
+							of the War and believe that none of the Time Lords survived the Final Battle.</span>&nbsp;&nbsp;</span>
 				</span>
+			</span>
+			<span class="A-tv">
+				<span class="A-game">They believe that the Moment was responsible for destroying Gallifrey, Skaro, and about 100 other worlds. </span>
+			</span>
+		</p><p><span class="A-audiobook"><span class="A-game">?? &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (after the Time War)&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span></span><span class="A-audiobook"><span class="A-licensed">
+					<span class="A-licensed">The Shadow Proclamation of the Humanian Era, the Human Time Agency of the 51st century,</span>
+				</span> and the Council of Eight at the End of Time attempt to police and protect what is left of History. </span><span class="A-audiobook"><span class="A-game">The 51st Century Time Agents are currently the best hope of the Spiral Politic against temporal marauders. </span>
 			</span>
 		</p>
 		<span class="A-tv">
@@ -574,17 +593,17 @@ kill the populations of the worlds it contaminates. </span>
 		<p>
 			<span class="A-infinity">
 				<span class="A-notbbc">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; (after the end of the War)
-					<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-					&nbsp; Political Animals: By this point Faction Paradox believe they are the only Faction of the Time War left.&nbsp;
-					They come to London in 1762 and 1774 in part to recruit new members.
 					<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; Political Animals: By this point Faction Paradox believe
+they are the only Faction of the Time War left.&nbsp; They come to
+London in 1762 and 1774 in part to recruit new members. <br>
 				</span>
 			</span>
 		</p>
 		<span class="A-infinity">
 			<span class="A-notbbc">??&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; (after Political Animals)
-				<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-				&nbsp; Betes Noires &amp; Dark Horses</span>
+				<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; Betes Noires &amp; Dark Horses</span>
 		</span>
 		<p>
 			<span class="A-fanon">1805-6 </span>
@@ -745,39 +764,7 @@ kill the populations of the worlds it contaminates.&nbsp;&nbsp;</span>
 			From this point on,</span>
 		<br>
 		<span class="A-audiobook">Soul takes Sabbath's timeship and the Star Killer Vortex Gun and flees with Miranda's daughter Zezanne. They are drawn
-			to I.M. Foreman's Junkyard and land there in 1963 where they take the names Doctor and Susan.&nbsp;</span>
-		<p>
-			<span class="A-fanon">1691~ </span>
-			&nbsp;&nbsp;&nbsp;
-			<span class="A-alternate">
-				<span class="A-tv">(after the death of Gallifrey)</span>
-			</span>
-			<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
-			<span class="A-alternate">
-				<span class="A-tv">
-					<span class="A-licensed">
-						<span class="A-tv">Many Time Aware and Time Active species, such as the Time Agents of the 51st century, believe the Time War was a legend.&nbsp;
-							They regard<span class="A-audiobook"> the Rulers of Time</span> (or Time Lords) as myths and whispers of the high species. &nbsp;However a few Time Active species know
-							of the War and believe that none of the Time Lords survived the Final Battle.</span>&nbsp;&nbsp;</span>
-				</span>
-			</span>
-			<span class="A-tv">
-				<span class="A-game">They believe that the Moment was responsible for destroying Gallifrey, Skaro, and about 100 other worlds. </span>
-			</span>
-		</p>
-		<p>
-			<span class="A-audiobook">?? &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; (in the wake of the Time War)
-				<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-				<span class="A-licensed">
-					<span class="A-licensed">The Shadow Proclamation of the Humanian Era, the Human Time Agency of the 51st century,</span>
-				</span> and the Council of Eight at the End of Time attempt to police and protect what is left of History. &nbsp;
-				<span class="A-licensed">
-					<span class="A-tv">The Shadow Proclamation recovered the Holy Writ </span>of the legendary Time Lords which contained a strict list of
-					rules about time travel and temporal manipulation. </span>
-				<span class="A-game">The 51st Century Time Agents are currently the best hope of the Spiral Politic against temporal marauders. </span>
-			</span>
-		</p>
-		<p>
+			to I.M. Foreman's Junkyard and land there in 1963 where they take the names Doctor and Susan.&nbsp;</span><p>
 			<span class="A-fanon">1806 </span>
 			<span class="A-fanon">(personal age 1132?)</span>
 			&nbsp;&nbsp;&nbsp;
@@ -6136,7 +6123,7 @@ non-corporeal.&nbsp; <span class="A-notbbc">&nbsp;</span>
 						<li>
 							<span class="A-tv">1st Segment of Time - The Dalek
 								<span class="A-fanon">ian </span>Era
-								<span class="A-audiobook">(5000 BC?? - ??)</span>
+								<span class="A-audiobook">(Event Zero to at least 5000 BC??)</span>
 							</span>
 						</li>
 						<li>
