--- a/rooweb.html
+++ b/rooweb.html
@@ -768,7 +768,7 @@ Each of these truncated aborted timelines is trapped in a giant loop </span>
 					<span class="A-fanon">single</span> transduction barrier </span>
 				<span class="A-audiobook">
 					<span class="A-tv">prevents</span> atomic sized
-					<span class="A-tv">infiltrations, teleporters, and illicit frequencies, </span>but can't stop spaceships from landing. It does </span>
+					<span class="A-tv">infiltrations, teleporters, and illicit frequencies, </span>but can't stop spaceships from landing. <span class="A-licensed">With the approval of Traffic Control, a split second gap is created to allow a TARDIS to pass through the barriers. </span>&nbsp;It does </span>
 				<span class="A-audiobook">allow
 sunlight and gravity to reach the surface, giving the sky a pearly
 orange color, but it can be polarized to block all light from the
@@ -784,7 +784,7 @@ from Gallifrey’s surface.</span>
 exception would be and any TARDIS carrying the Lord President, whose
 Rassilon Imprimatur and Presidential Code allow him to pass through the
 transduction barriers at will. It is possible to configure the the
-controls to trap a TARDIS inside them barriers.&nbsp; A TARDIS in such
+controls to trap a TARDIS inside them barriers. A TARDIS in such
 a position will find it will require all of its power just to transmit
 a short range distress call to Gallifrey. <br></span><span class="A-tv">If Gallifrey was every to be attacked the Transduction Barrier would be raised to Factor 5. </span>
 				<span class="A-fanon">At this level</span>
@@ -841,11 +841,11 @@ use Transduction Barriers in other locations </span>
 				<span class="A-tv">The fact that both Gallifrey's network, and the Matrix are panotropic computer networks has caused some confusion. But
 					the
 					<span class="A-licensed">Central </span>Matrix of Time is only a small part of Gallifrey's planet wide APC Net.
-					<span class="A-game">This APC Net acts as a repository of all the knowledge and history of Gallifrey. </span>While the APC Net is covers
-					the world of Gallifrey, the Matrix of Time is located in its own micro-universes, outside of Time and History. While
-					all Time Lords
-					<span class="A-audiobook">and Academy Students </span>are guaranteed partial access to the APC Net and, through it, limited access to the Matrix,
-					it would appear that, before the events of The Deadly Assassin, only the Inner Council knew much about the Matrix and
+					<span class="A-game">This APC Net acts as a repository of all the knowledge and history of Gallifrey. </span>While
+the APC Net is covers the world of Gallifrey, the Matrix of Time is
+located in its own micro-universes, outside of Time and History. All
+Time Lords <span class="A-audiobook">and Academy Students </span>are guaranteed partial access to the APC Net and, through it, limited access to the Matrix,
+					but it would appear that, before the events of The Deadly Assassin, only the Inner Council knew much about the Matrix and
 					its capabilities. Only the Lord President and the Keeper of the Matrix have complete access to Matrix of Time. </span>
 			</div>
 			<div class="section">
@@ -871,9 +871,9 @@ use Transduction Barriers in other locations </span>
 				<span class="A-tv">The President also has the authority to isolate Master Control of the Matrix (ie prevent anyone from accessing it) by
 					charging the transduction field. </span>
 			</div>
-			<div class="section">
+			<div class="section A-tv">
 				<span class="A-tv">The Matrix is a vast extra-dimensional panotropic computer network </span>
-				<span class="A-audiobook">created using warp matrix engineering. </span>
+				<span class="A-audiobook">created using warp matrix engineering.&nbsp; </span>
 				<span class="A-notbbc">The biodata of the whole of the planet of Gallifrey acts as a planet sized receiver and processor of data from the rest
 					of the universe.
 					<span class="A-game">Every second more data concerning the constantly evolving Web of Time is collected. </span>
@@ -884,9 +884,7 @@ use Transduction Barriers in other locations </span>
 						<span class="A-audiobook">memory system of </span>data-slices. </span>This is an eleven dimensional self referential lattice of </span>
 				<span class="A-tv">trillions </span>
 				<span class="A-game">upon trillions </span>
-				<span class="A-tv">of neural electro-chemical cells in a continuous matrix.</span>
-				<span class="A-audiobook">
-These neural mechanics of this communal, eternal brain, can processes
+				<span class="A-tv">of neural electro-chemical cells in a continuous matrix. &nbsp;</span><span class="A-audiobook">The neural mechanics of this communal, eternal brain, can processes
 data faster than the speed of Time. Time Lords store large amounts of
 data on Infostamps.&nbsp; These cylindrical memory banks store the
 energy of perception and memories (aka artron energy) in high enough
@@ -896,7 +894,7 @@ memories. There is also a Sub-Matrix which handles the basic functions
 of Capitol, like transductions. </span>
 				<span class="A-tv">The Matrix requires maintenance (such as the replacement of a transductor) approximately once every 1000 years and is
 					maintained by the Co-ordinator of the Matrix
-					<span class="A-game"> (later</span> known as the Keeper of the Matrix) from the APC Control room
+					<span class="A-game"> (later</span> known as the Keeper of the Matrix) from the APC <span class="A-licensed">Records</span> Control room
 					<span class="A-fanon">(in the Archive Tower). </span>
 				</span>
 			</div>
@@ -919,7 +917,11 @@ of Capitol, like transductions. </span>
 			<div class="section">
 				<span class="A-audiobook">All of the information is stored in the Archive Banks. </span>
 				<span class="A-tv">The more primitive information in the Matrix was archived in Phase 1 and 2. The more advanced and recent information
-					was kept in a master file composed of Phases 3, 4, 5 and 6. </span>
+					was kept in a master file composed of Phases 3, 4, 5 and 6. </span><span class="A-tv">Access to the extra-dimensional cloisters is found deep beneath the Capitol. &nbsp;This crypt, like area is protected by&nbsp;</span><span class="A-tv">Deceased Time Lord minds know as</span><span class="A-tv">
+Cloister Wraiths (aka Sliders) which 'file' (aka trap and immobilize)
+any unauthorized entity that intrudes. &nbsp;When the Wraiths were
+active the Cloister bells would ring and could be heard across the
+Capitol.</span><span class="A-tv"> </span>
 				<span class="A-audiobook">Should Gallifrey be destroyed or retro-annulled the Matrix would continue to survive within its own dimension for 50-60
 					years. </span>
 				<span class="A-notbbc">Despite this, the Matrix has a back up of all its records called the Secure Information Dump, which is located in the
@@ -1364,10 +1366,10 @@ the Lord President. </span>
 											</li>
 											<li>
 												<span class="A-tv">Article 7 states that a Time Lord who destroys an entire species forfeits his remaining lives - and thus his
-													title of Time Lord.</span>
+													title of Time Lord.</span>&nbsp;
 												<br>
 												<span class="A-notbbc">*Note: Article 7 was created not to preserve life but to prevent the massive damage to History that genocide
-													would cause. </span>
+													would cause. <span class="A-fanon">For this reason, </span><span class="A-audiobook">Article 7 does not generally apply to Lesser Species.</span> </span>
 											</li>
 											<li>
 												<span class="A-tv">All Time Lords are pledged to prevent alien aggression
@@ -1429,8 +1431,7 @@ the Lord President. </span>
 								</ol>
 							</li>
 							<li>
-								<span class="A-game">The Third Law of Time is often known as </span>
-								<span class="A-notbbc">the Protocols of Linearity. </span>
+								<span class="A-game">The Third Law of Time is often known as the Law of Relative Time&nbsp;</span><span class="A-notbbc">or the Protocols of Linearity. </span>
 								<span class="A-tv">They state that No Time Lord shall travel into Gallifrey's past. </span>
 								<span class="A-audiobook">These protocols are not physical laws per say, but rather engineered by powerful Temporal Baffels, Backtime Field
 									Buffers, </span>
